--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "apexcharts": "^4.7.0",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.17.3",
+    "leaflet": "^1.9.4",
     "rc-slider": "^11.1.8",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
