--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lucide-react": "^0.525.0",
     "rc-slider": "^11.1.8",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
