--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "framer-motion": "^12.17.3",
+    "framer-motion": "^12.23.6",
     "fuse.js": "^7.1.0",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -28,9 +28,11 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.19",
